objects/Partner_KPI_Periods__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>For example Year = 2016 then the quarters will be as follows: 
Quarter 1 - Sep/Oct/Nov 2015 
Quarter 2 - Dec/Jan/Feb 2016 
Quarter 3 - Mar/Apr/May 2016 
Quarter 4 - Jun/Jul/Aug 2016</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Quarter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Quarter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Opened__c</fullName>
        <label>Date Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Partner KPI Periods</label>
</CustomObject>